# woodland-navigation

./: .gitignore  README.md
Matlab/: initScript.m  mainGUI.m  mainScriptKnn.m
Matlab/classificationTest/: mainClassification.m
Matlab/evaluation/: evalMedianAsPrediction.m  evalRandomAsPrediction.m  evalRandomForestAllFeatures.m  evalRandomForestDensity.m  evalRobustFitAllFeatures.m
Matlab/featuresRatioGrid/: getRatioGridsHistogram.m  mainScriptRatioGrids.m  mainSimulation.m
Matlab/featuresStatistical/: extractHistogramVoxels.m  extractLayersYZ.m
Matlab/labeling/: initLabeling.m  showDftKnn.m  showDftPca.m  showDftVectors.m  showHierarchicalClustering.m  showOrderedNorm.m  showRawKnn.m
Matlab/neutralNetworkTest/: houseExample.m
Matlab/regression/: createDatasetMatrices.m  findLeafSize.m  knnRegression.m  randomForestKFoldValidation.m
Matlab/simulation/: buildPointsCountVoxelGrids.m  buildWordLists.m  loadSimulationDataset.m  mainSimulation.m
Matlab/slopeCorrection/: extractRawData.m  mainRegression.m  segmentData.m  showLinearRelation.m
Matlab/utils/: setUserTraversabilityCost.m
Matlab/visualisation/: showDataset.m  showResultsProgress.m
MatlabPrototypes/: Prototype.m  PrototypeML.m  initScript.m  mainGUI.m  mainQuickTest.m  mainScriptKnn.m  mainScriptRandomForest.m
MatlabPrototypes/Data/: 2014-09-18-11-24-38_motor_currents.csv  2014-09-18-11-41-59_motor_currents.csv  2014-09-18-11-55-34_motor_currents.csv  2014-09-18-12-15-25_motor_currents.csv  2014-09-18-12-54-28_motor_currents.csv  AlmostNothing2_motor_currents.csv  Easy_motor_currents.csv  LightTrees2_motor_currents.csv  LightTrees_motor_currents.csv  LowSoft_motor_currents.csv  LowVegOneTree_motor_currents.csv  LowVegetation_motor_currents.csv  MediumHigh2_motor_currents.csv  MediumHigh_motor_currents.csv  Nothing3_motor_currents.csv  Nothing_motor_currents.csv  PassableTree_motor_currents.csv  RoughGround_motor_currents.csv  SmallBranchesAndTrees_motor_currents.csv
MatlabPrototypes/Data2/: 2014-09-18-11-02-56_motor_currents.csv  2014-09-18-11-04-36_motor_currents.csv  2014-09-18-11-07-12_motor_currents.csv  2014-09-18-11-12-44_motor_currents.csv  2014-09-18-11-13-48_motor_currents.csv  2014-09-18-11-15-17_motor_currents.csv  2014-09-18-11-20-07_motor_currents.csv  2014-09-18-11-29-02_motor_currents.csv  2014-09-18-11-32-50_motor_currents.csv  2014-09-18-11-36-16_motor_currents.csv  2014-09-18-11-37-56_motor_currents.csv  2014-09-18-11-53-06_motor_currents.csv  2014-09-18-11-54-11_motor_currents.csv  2014-09-18-11-59-16_motor_currents.csv  2014-09-18-12-00-27_motor_currents.csv  2014-09-18-12-04-46_motor_currents.csv  2014-09-18-12-08-27_motor_currents.csv  2014-09-18-12-13-42_motor_currents.csv  2014-09-18-12-14-33_motor_currents.csv  2014-09-18-12-18-53_motor_currents.csv  2014-09-18-12-23-22_motor_currents.csv  2014-09-18-12-24-20_motor_currents.csv  2014-09-18-12-28-26_motor_currents.csv  2014-09-18-12-31-05_motor_currents.csv  2014-09-18-12-36-45_motor_currents.csv  2014-09-18-12-46-34_motor_currents.csv  2014-09-18-12-51-18_motor_currents.csv  2014-09-18-12-55-31_motor_currents.csv  2014-09-18-12-56-38_motor_currents.csv  2014-09-18-13-01-11_motor_currents.csv  2014-09-18-13-02-19_motor_currents.csv  2014-09-18-13-03-54_motor_currents.csv
MatlabPrototypes/GeometricRegression/: LoadData.m  defineDatasetStruct.m  extractAreaOfInterest.m  extractFeatures.m  extractTraversabilityCost.m  init.m  initScript.m  loadDataset.m  loadRawData.m  main.m  mainComplete.m  mainExtractAndEval.m  mainScriptKnn.m  mainScriptRandomForest.m  mainVisualiseOrdered.m  prototype.m  saveDataset.m  showData.m  showInfo.m  showResults.m  test.m
MatlabPrototypes/SlopeCorrection/: extractData.m  findBestWindowSize.m  main.m  mainRPY_Correction.m  segmentData.m  showPredictions.m  showRawData.m
MatlabPrototypes/VisualRegression/: PrototypeGabor.m
MatlabPrototypes/examples/: regressionExample.m
MatlabPrototypes/featuresConvolutional/: buildFilterList.m  buildVoxelCardinalityMap.m  mainScriptFeaturesConvolutional.m
MatlabPrototypes/utils/: drawCube.m  (+5 more)
ModelingTests/: CeresCurveFitting.m  createCylinder.m  plotExp.m  plotGauss.m  prototyping.m  reflectOverPlan.m  rotateRollPitch.m  rotateRollPitchDegree.m
NarfResultsScripts/: AddPrefixToFiles.py  ComputeResults.py  ManageOdom.py  data.py  main.py  odom.py  processing.py  util.py  visualization.py
PythonScripts/: DataExtraction.py  SampleAcquisition.py
StederPlaceRecognition/: CMakeLists.txt
StederPlaceRecognition/datasetConverters/: kvarntorpMineDatasetConverter.cpp
StederPlaceRecognition/narfPlaceRecognition/: mainWidget.cpp  visMapCloud.cpp
StederPlaceRecognition/narfPlaceRecognitionLib/: scanDatabase.cpp  scanDatabase.h  sparsePointCloud.h
Utils/: DataExtraction.py  SampleAcquisition.py
WoodlandNavigation/: CMakeLists.txt  main.cpp
WoodlandNavigation/src/: cylinderfitting.cpp  cylinderfitting.h  definitions.h  display.cpp  display.h  groundprocessing.cpp  groundprocessing.h  groundvehicle.h  huskya200.cpp  huskya200.h  util.cpp  util.h  voxel.cpp  voxel.h  voxelcloud.cpp  voxelcloud.h  voxelgridpointcloud.cpp  voxelgridpointcloud.cpp.autosave  voxelgridpointcloud.h
WoodlandNavigation/src/datatype/: pointcloud.cpp  pointcloud.h  voxel.cpp  voxel.h  voxelgridpointcloud.cpp  voxelgridpointcloud.h
WoodlandNavigation/src/placerecognition/: placerecognitionprototype.cpp  placerecognitionprototype.h
WoodlandNavigation/src/util/: display.cpp  display.h  mathutil.cpp  mathutil.h  pointcloudfilter.cpp  pointcloudfilter.h  pointcloudprocessing.cpp  pointcloudprocessing.h  pointcloudutil.cpp  pointcloudutil.h
WoodlandNavigation/test/: PointCloudTest.cpp
WoodlandNavigation/thirdpartylibraries/alglib/: CMakeLists.txt
narfPlaceRecognition/: CMakeLists.txt  notes.md
narfPlaceRecognition/narfPlaceRecognition/: CMakeLists.txt  Results.cpp  Results.hpp  baseMainWidget.ui  mainWidget.h  narfPlaceRecognition.cpp  sebmain.cpp  visMapCloud.h
narfPlaceRecognition/narfPlaceRecognitionLib/: CMakeLists.txt  rangeImageMatching.cpp  rangeImageMatching.h
(+673 files in other folders)
